<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="4dp">

    <EditText
        android:id="@+id/inputTicker"
        style="@style/InputField"
        android:layout_marginTop="8dp"
        android:hint="@string/label_stock_ticker"
        android:inputType="textCapCharacters"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputQuantity"
        style="@style/InputField"
        android:layout_marginTop="10dp"
        android:hint="@string/label_quantity"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputPrice"
        style="@style/InputField"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_avg_price"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />
</LinearLayout>
